batch32/pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dotnet-pod
  namespace: aks
  labels:
    app: dotnet
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-type
            operator: In
            values:
            - backend
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - dotnet
        topologyKey: "kubernetes.io/hostname"
  containers:
  - name: dotnet
    image: nshalini01/dockcompose-app:latest
    ports:
    - containerPort: 5000
    readinessProbe:
      httpGet:
        path: /healthz
        port: 5000
      initialDelaySeconds: 10
      periodSeconds: 5
    livenessProbe:
      httpGet:
        path: /healthz
        port: 5000
      initialDelaySeconds: 30
      periodSeconds: 10
