batch32/tolerations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: helm
spec:
  containers:
  - name: my-container
    image: threedha14/dockercompose-app:latest
  tolerations:
  - key: "special"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
