batch32/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet
  namespace: helm
spec:
  selector:
    app: dotnet
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
