batch32/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-dotnet
  namespace: aks
spec:
  podSelector:
    matchLabels:
      app: dotnet
  ingress:
  - ports:
    - protocol: TCP
      port: 5000
  egress:
  - ports:
    - protocol: TCP
      port: 5000
